2007-09-28 Tobias Gehrig <tobias@gehrignet.de>
	* src/DataViews/_PedigreeView.py: use subsection thumbnails
	* src/DataViews/_RelationView.py: use subsection thumbnails
	* src/Editors/_EditPerson.py: use subsection thumbnails
	* src/Editors/_EditMediaRef.py: added subsection thumbnail preview and signal handlers
	to update subsection thumbnail on spinbutton changes
	* src/DisplayTabs/_GalleryTab.py: use subsection thumbnails
	* src/ThumbNails.py: added rectangle parameter to thumbnail functions to specify the subsection
	* src/GrampsWidgets.py: added class MonitoredSpinButton
	* src/glade/gramps.glade: added preview pixmap of subsection thumbnail to change_description

2007-09-28  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/CairoDoc.py (fontstyle_to_fontdescription): Fix deprecated
	warning.
	* src/ReportBase/_PaperMenu.py:
	* src/data/papersize.xml:
	Fix "C" and "D" paper size values.
	* src/const.py.in: Correct PAPERSIZE path constant.

2007-09-28  Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/NarrativeWeb.py: provide fallback dates on Narrative Web pages
	Issue #0001258

2007-09-27  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/GtkPrint.py (paperstyle_to_pagesetup): Fix paper name and
	custom size conversion.

2007-09-27  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/CairoDoc.py: Really fix text position in the box.

2007-09-27  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/PdfDoc.py: Fix pagination problems.
	* src/docgen/CairoDoc.py: Fix pagination problem. Fix text position in
	the box.

2007-09-27  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/FilterEditor/_EditRule.py: wrong filter selection, bug #807
	Based on work Johan

2007-09-26 James G. Sack <jgsack@san.rr.com>
	* src/plugins/Check.py: same sex marriage need not be CIVIL_UNION, bug #1245
	This includes the 8374 commit which was not present in trunk (??)
