@@ -1,7 +1,7 @@
 #
 # Gramps - a GTK+/GNOME based genealogy program
 #
-# Copyright (C) 2000-2007  Donald N. Allingham
+# Copyright (C) 2007  Zsolt Foldvari
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -549,12 +549,9 @@ class GtkPrint(CairoDoc):
     def on_begin_print(self, operation, context):
         """Setup environment for printing.
         """
-        # get page size
+        # get data from print context
         self.page_width = round(context.get_width())
         self.page_height = round(context.get_height())
-        
-        # initialize pagination
-        self.setup_paginate()
         
     def on_paginate(self, operation, context):
         """Paginate the whole document in chunks.
@@ -562,8 +559,12 @@ class GtkPrint(CairoDoc):
         layout = context.create_pango_layout()
         dpi_x = context.get_dpi_x()
         dpi_y = context.get_dpi_y()
-        
-        finished = self.paginate(layout, dpi_x, dpi_y)
+
+        finished = self.paginate(layout,
+                                 self.page_width,
+                                 self.page_height,
+                                 dpi_x,
+                                 dpi_y)
         # update page number
         operation.set_n_pages(len(self._pages))
         
@@ -578,12 +579,16 @@ class GtkPrint(CairoDoc):
         """
         cr = context.get_cairo_context()
         layout = context.create_pango_layout()
-        width = round(context.get_width())
-        height = round(context.get_height())
         dpi_x = context.get_dpi_x()
         dpi_y = context.get_dpi_y()
 
-        self.draw_page(page_nr, cr, layout, width, height, dpi_x, dpi_y)
+        self.draw_page(page_nr,
+                       cr,
+                       layout,
+                       self.page_width,
+                       self.page_height,
+                       dpi_x,
+                       dpi_y)
         
     def on_preview(self, operation, preview, context, parent):
         """Implement custom print preview functionality.
@@ -608,6 +613,6 @@ class GtkPrint(CairoDoc):
 # Register the document generator with the GRAMPS plugin system
 #
 #------------------------------------------------------------------------
-register_text_doc(_('Print... (Gtk+)'), GtkPrint, 1, 1, 1, "", None)
-register_draw_doc(_('Print... (Gtk+)'), GtkPrint, 1, 1, "", None)
-register_book_doc(_('Print... (Gtk+)'), GtkPrint, 1, 1, 1, "", None)
+register_text_doc(_('Print...'), GtkPrint, 1, 1, 1, "", None)
+register_draw_doc(_('Print...'), GtkPrint, 1, 1, "", None)
+register_book_doc(_('Print...'), GtkPrint, 1, 1, 1, "", None)
